Continuação da Home

--- a/home.html
+++ b/home.html
@@ -8,22 +8,33 @@
         <link rel="stylesheet" href="homecss.css">
 </head>
 <body>
-    <div class="header">
-        <div class="container">
-            <a href="home.html"><img src="esportes2.png" class="active"></a>
-            <ul class="navbar" >
-                <li><a href="">Graficos</a></li>
-                <li><a href="">Simulador</a></li>
-                <li style="color: white;">|</li>
-                <li><a href="">Login</a></li>
-                <li><a href="">Cadastro</a></li>
-            </ul>
+    <div class="red">
+        <div class="redhome"><a href="">Home</a></div>
+        <div class="redsimulador"><a href="">Simulador</a></div>
+    </div>
+    <div class="blue">
+        <div class="bluelogin"><a href="">Login</a></div>
+        <div class="bluecadastro"><a href="">Cadastro</a></div>
+    </div>
+    <div class="imagem">
+        <div class="escrita">
+            “A diferença entre o impossível e o possível é definida através da determinação de alguém.” -- ― Tommy Lasorda (Diretor dos Dodgers de Los Angeles por duas décadas)<br>
+            “A vida é para ser um desafio, pois desafios são o que nos fazem crescer.” -- ― Manny Pacquiao (Um dos maiores boxeadores da história e uma lenda viva nas Filipinas, sua terra natal)<br> 
         </div>
-        <div class="imagem">
-            <div class="escrita">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga corrupti beatae aliquid, dignissimos ullam 
-            </div>
-        </div>
+    </div>
+    <div class="graficos">
+
+    </div>
+    <div class="curiosidades">
+
+    </div>
+    <div class="saúde">
+
+    </div>
+    <div class="nacionais">
+
+    </div>
+    <div class="footer">
 
     </div>
 </body>
