--- a/cadastro.html
+++ b/cadastro.html
@@ -10,15 +10,21 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="home"><a href="index.html" class="active">Home</a></div>
+        <div class="home"><a href="index.html">Home</a></div>
         <div class="simulador"><a href="">Simulador</a></div>
         <div class="bola"><a href="">⚽🏀🥊</a></div>
         <div class="login"><a href="login.html">Login</a></div>
-        <div class="cadastro"><a href="cadastro.html">Cadastro</a></div>
+        <div class="cadastro"><a href="cadastro.html" class="active">Cadastro</a></div>
     </div>
     <div class="imagem">
         <div class="cadastro_usu">
-
+            <h2>Cadastre-se em nosso site!</h2>
+            <h3>Insira seu Nome:</h3><input id="nome_cad" placeholder="Digite seu nome" type="text">
+            <h3>Insira seu Apelido:</h3><input id="apelido_cad" placeholder="Digite seu apelido" type="text">
+            <h3>Insira sua Senha:</h3><input id="senha_cad" placeholder="Digite sua senha" type="password">
+            <h3>Insira seu CPF:</h3><input id="cpf_cad" placeholder="Digite seu CPF" type="text">
+            <h3>Insira seu E-mail:</h3><input id="email_cad" placeholder="Digite seu E-mail" type="email"><br>
+            <button>Cadastrar</button>
         </div>
     </div>
     <div class="footer">
