--- a/login.html
+++ b/login.html
@@ -10,15 +10,18 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="home"><a href="index.html" class="active">Home</a></div>
+        <div class="home"><a href="index.html">Home</a></div>
         <div class="simulador"><a href="">Simulador</a></div>
         <div class="bola"><a href="">⚽🏀🥊</a></div>
-        <div class="login"><a href="login.html">Login</a></div>
+        <div class="login"><a href="login.html" class="active">Login</a></div>
         <div class="cadastro"><a href="cadastro.html">Cadastro</a></div>
     </div>
     <div class="imagem">
         <div class="login_usu">
-
+            <h2>Seja bem-vindo!</h2> <h2>Entre com sua conta!</h2>
+            <h3>Digite seu Apelido:</h3><input id="apelido_login" placeholder="Digite seu apelido" type="text">
+            <h3>Digite sua Senha:</h3><input id="senha_login" placeholder="Digite sua senha" type="password"><br>
+            <button>Entrar</button>
         </div>
     </div>
     <div class="footer">
