Banco de dados conectado com api de cadastro/login

--- a/api-projeto-site/public/index.html
+++ b/api-projeto-site/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="navbar">
         <div class="home"><a href="index.html" class="active">Home</a></div>
-        <div class="simulador"><a href="">Simulador</a></div>
+        <div class="simulador"><a href="herois.html">Heróis</a></div>
         <div class="bola"><a href="">⚽🏀🥊</a></div>
         <div class="login"><a href="login.html">Login</a></div>
         <div class="cadastro"><a href="cadastro.html">Cadastro</a></div>
@@ -28,9 +28,6 @@
 
     </div>
     <div class="saúde">
-
-    </div>
-    <div class="nacionais">
 
     </div>
     <div class="footer">
