Começo da estilização da home

--- a/api-projeto-site/public/cadastro.html
+++ b/api-projeto-site/public/cadastro.html
@@ -52,7 +52,7 @@
     </div>
     <div class="footer">
         <div class="container">
-            Site desenvolvido por Gabriel Lima da Silva<br>
+            Site desenvolvido por Gabriel Lima da Silva ©<br>
             RA: 01212152<br>
             Bandtec Digital School
         </div>
