página heróis com animação css

--- a/api-projeto-site/public/cadastro.html
+++ b/api-projeto-site/public/cadastro.html
@@ -20,13 +20,13 @@
 <body>
     <div class="navbar">
         <div class="home"><a href="index.html">Home</a></div>
-        <div class="simulador"><a href="herois.html">Heróis</a></div>
+        <div class="simulador"><a href="heroi.html">Heróis</a></div>
         <div class="bola"><a href="">⚽🏀🥊</a></div>
         <div class="login"><a href="login.html">Login</a></div>
         <div class="cadastro"><a href="cadastro.html" class="active">Cadastro</a></div>
     </div>
     <div class="imagem ">
-        <div class="cadastro_usu ">
+        <div class="cadastro_usu">
                 <h2>Seja bem-vindo!</h2><br><br>
                     <form id="form_cadastro" method="post" onsubmit="return cadastrar()">
                         Nome:<br>
