--- a/api-projeto-site/public/login.html
+++ b/api-projeto-site/public/login.html
@@ -18,7 +18,7 @@
 <body>
     <div class="navbar">
         <div class="home"><a href="index.html">Home</a></div>
-        <div class="simulador"><a href="herois.html">Heróis</a></div>
+        <div class="simulador"><a href="heroi.html">Heróis</a></div>
         <div class="bola"><a href="">⚽🏀🥊</a></div>
         <div class="login"><a href="login.html" class="active">Login</a></div>
         <div class="cadastro"><a href="cadastro.html">Cadastro</a></div>
