Métricas/Calendário de treinos inseridos

--- a/api-projeto-site/public/index.html
+++ b/api-projeto-site/public/index.html
@@ -28,7 +28,7 @@
     <div class="escrita">
       “A vida é para ser um desafio, pois desafios são o que nos fazem crescer.” <br>― Manny Pacquiao
     </div>
-    <div class="marketing" id="mark"> <a href="">Inscreva-se</a> para obter uma consultoria de treinos gratuita!</div>
+    <div class="marketing" id="mark"> <a href="cadastro.html">Inscreva-se</a> para obter uma consultoria de treinos gratuita!</div>
   </div> <br><br>
   <h1 style="text-align: center; font-family: montserrat;">Esportes mais populares do mundo:</h1>
   <div class="carrossel meio">
